fixed problem with new sidebar strategy where sidebar-container was covering over part of the content area making things unclickable

--- a/resources/gato-template-txstate2015/css/_sidebar.scss
+++ b/resources/gato-template-txstate2015/css/_sidebar.scss
@@ -16,11 +16,13 @@
     padding: 0;
   }
   .sidebar {
+    position: absolute;
+    top: 0;
+    right: 0;
     padding: 0 2rem;
-    float: right;
-    //margin-bottom: -1rem;
     width: 25%;
     @media screen and (max-width: $sm-breakpoint) {
+      position: relative;
       padding: 0px;
       float: none;
       width: 100%;
